--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -85,6 +85,45 @@ form .field-group .field + .field {
   margin-left: 24px;
 }
 
+.items-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
+}
+
+.items-grid li {
+  height: 180px;
+  background-color: #f5f5f5;
+  list-style: none;
+  border: 2px solid #f5f5f5;
+  border-radius: 8px;
+  padding: 32px 24px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  cursor: pointer;
+}
+
+.items-grid li.selected {
+  background-color: #e1faec;
+  border: 2px solid #34cb79;
+}
+
+.items-grid li span {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  color: var(--title-color);
+  margin-top: 12px;
+}
+
+.items-grid li span,
+.items-grid li img {
+  pointer-events: none;
+}
+
 form button {
   width: 260px;
   height: 56px;
