--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -17,35 +17,32 @@
 {% block content %} {% include "partials/page-header.html" %}
 
 <main>
-  <h4><strong>2 pontos </strong> encontrados</h4>
+  {% if total > 0 %}
+
+  <h4><strong>{{total}} pontos </strong> encontrados</h4>
 
   <div class="cards">
+    {% for place in places %}
+
     <div class="card">
-      <img
-        src="https://images.unsplash.com/photo-1532996122724-e3c354a0b15b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="Colectoria" />
-      <h1>Colectoria</h1>
-      <h3>Resíduos Eletrônicos, Lâmpadas</h3>
+      <img src="{{ place.image}}" alt="{{ place.name}}" />
+      <h1>{{ place.name}}</h1>
+      <h3>{{ place.items}}</h3>
       <p>
-        Rio do Sul, Santa Catariana <br />
-        Guilherme Gemballa, Jardin América <br />
-        Número 260
+        {{ place.city}}, {{ place.state}} <br />
+        {{ place.address}} <br />
+        {{ place.address2}}
       </p>
     </div>
 
-    <div class="card">
-      <img
-        src="https://images.unsplash.com/photo-1532996122724-e3c354a0b15b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="Papersider" />
-      <h1>Papersider</h1>
-      <h3>Papéis e Papelão</h3>
-      <p>
-        Rio do Sul, Santa Catariana <br />
-        Guilherme Gemballa, Jardin América <br />
-        Número 260
-      </p>
-    </div>
+    {% endfor %}
   </div>
+
+  {% else %}
+
+  <h4><strong>Nenhum</strong> local encontrado</h4>
+
+  {% endif %}
 </main>
 
 {% endblock content %}
